# llvm2cpg

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  Jenkinsfile.pr  README.md  cpg.proto  design_considerations.md
.circleci/: config.yml
.github/workflows/: ci-macos.yml  ci-ubuntu-18.yml  ci-ubuntu-20.yml
build-system/: build-system.cmake  cpack.cmake  fixtures.cmake  version.cmake
build-system/tests/: end2end-tests.cmake  fixtures.cmake  integration-tests.cmake  smoke-tests.cmake  tests.cmake  validation-tests.cmake
ci/: Vagrantfile  ansible.cfg  macos-playbook.yaml  ubuntu-playbook.yaml
ci/helpers/: build-and-test.yaml  build-llvm2cpg.yaml  install-joern.yaml  install-libzip.yaml  install-llvm.yaml  install-ocular.yaml  install-protobuf.yaml  package.yaml  run-tests.yaml  variables.yaml  working-dir.yaml
devtools/: cpg_pb2.py  cpgview.py  cpgviewAST.sh  cpgviewCFG.sh
docs/: design_considerations.md  development.md  release-process.md
include/llvm2cpg/CPG/: BitcodeLoader.h  CPG.h  CPGFile.h  CPGMethod.h  CPGOperatorNames.h  ObjCTypeHierarchy.h  Version.h
include/llvm2cpg/CPGWriter/: CPGProtoWriter.h  CPGWriter.h
include/llvm2cpg/Demangler/: CPGDemangler.h  Demangler.h
include/llvm2cpg/LLVMExt/: TypeEquality.h
include/llvm2cpg/Logger/: CPGLogger.h
include/llvm2cpg/Transforms/: CustomPasses.h  Transforms.h
include/llvm2cpg/Traversals/: ObjCTraversal.h
lib/: CMakeLists.txt
lib/CPG/: BitcodeLoader.cpp  CMakeLists.txt  CPG.cpp  CPGFile.cpp  CPGInstVisitor.cpp  CPGInstVisitor.h  CPGMethod.cpp  CPGOperatorNames.cpp  ObjCTypeHierarchy.cpp  Version.cpp
lib/Demangler/: CMakeLists.txt  CPGDemangler.cpp  Demangler.cpp  IntrinsicsDemangler.cpp  IntrinsicsDemangler.h
lib/LLVMExt/: CMakeLists.txt  TypeEquality.cpp
lib/Logger/: CMakeLists.txt  CPGLogger.cpp
lib/ProtoWriter/: CMakeLists.txt  CPGEmitter.cpp  CPGEmitter.h  CPGProtoAdapter.cpp  CPGProtoAdapter.h  CPGProtoBuilder.cpp  CPGProtoBuilder.h  CPGProtoNode.cpp  CPGProtoNode.h  CPGProtoWriter.cpp  CPGTypeEmitter.cpp  CPGTypeEmitter.h
lib/Transforms/: CMakeLists.txt  CustomPasses.cpp  Transforms.cpp
lib/Traversals/: CMakeLists.txt  ObjCTraversal.cpp
tests/: CMakeLists.txt
tests/CPGTests/: BitcodeLoaderTests.cpp  CMakeLists.txt  CPGMethodTests.cpp  CPGTests.cpp
tests/end2end-tests/: ..gitignore.un~  .gitignore  .gitignore.swp  CMakeLists.txt  lit.cfg
tests/end2end-tests/c/: call-resolution.scala
tests/end2end-tests/c/fixtures/: call_cast.c
tests/end2end-tests/data-flow/: caller-arguments.scala  caller-callee.scala  no-use-after-free-joern.scala  no-use-after-free-ocular.scala  use-after-free-joern.scala  use-after-free-ocular.scala
tests/end2end-tests/data-flow/fixtures/: dataflow_caller_arguments.c  no_use_after_free.c  use_after_free.c
tests/end2end-tests/debug-info/: anonymous-struct-members.scala  nested-struct-members.scala  struct-members.scala
tests/end2end-tests/debug-info/fixtures/: debug_nested_struct_members.c
tests/end2end-tests/driver/: sample.c  strict-mode.driver  validations.driver
tests/end2end-tests/iGoat/: iGoat.scala  lit.cfg
tests/end2end-tests/iGoat/policies/: NSEntityDescription.policy  NSManagedObject.policy  NSObject.policy  NSUserDefaults.policy
tests/end2end-tests/objc/: call-resolution.scala  categories-external.scala  categories.scala  classes.scala  double-init.scala  external-classes.scala  externally-defined-class.scala  methods.scala  multiple-external-classes.scala  strings-no-inline.scala  strings.scala  types-from-debug-info.scala
tests/end2end-tests/objc-call-resoltion/: test.scala
tests/end2end-tests/objc/fixtures/: double-init.ll  double-init.m  (+11 more)
tests/fixtures/: CMakeLists.txt
tests/fixtures/basic_c_support/: APinlining.c  CMakeLists.txt  call_function_pointer.c  call_int.c  call_malformed_utf_string.c  call_string.c  call_unknown_function.c  gep_array.c  gep_flat_struct.c  inline_asm.c  phi.c  return_cast.c  return_conditional.c  return_constant.c  return_global.c  return_multiplied_parameter.c  return_parameter.c  switch.c  vectorfind.c
tests/fixtures/basic_cxx_support/: CMakeLists.txt  class_method_names.cpp
tests/fixtures/basic_objc_support/: CMakeLists.txt  objc_categories.ll  objc_categories.m  objc_categories_external.m  objc_classes.ll  objc_external_class.ll  objc_external_class.m  objc_external_defined_class.m  objc_strings.ll  objc_types_from_debug_info.ll  objc_types_from_debug_info.m
tests/fixtures/bitcode_extraction/: CMakeLists.txt  bitcode_extraction.c
tests/fixtures/debug_info_support/: CMakeLists.txt  debug_anonymous_struct_members.c  debug_struct_members.c
tests/fixtures/hello_world/: CMakeLists.txt  hello_world.c
tests/fixtures/hello_world_cxx/: CMakeLists.txt
tests/fixtures/inline_example/: CMakeLists.txt  inline_example.cpp
tests/fixtures/llvm_support/: CMakeLists.txt  aggregate_access.ll  alias.ll  atomics.ll  branches.ll  const_null.ll  constants.ll  fence.ll  fneg_inst.ll  gep_array.ll  gep_flat_struct.ll  gep_mixed.ll  inline_asm.ll  llvm_structs.ll  malformed_utf8.ll  nested_const_expr.ll  phi.ll  select_inst.ll  self_referencing_global.ll  store_const_expr.ll  struct_member_access.ll  struct_merging_1.ll  struct_merging_2.ll  switches.ll  unreachable.ll  vectors.ll
tests/fixtures/objc_call_resolution/: CMakeLists.txt  objc_call_00_usage.m
tests/fixtures/simple_c_example/: CMakeLists.txt  if_with_locals.c  if_with_more_locals.c  if_without_locals.c
tests/integration-tests/: .gitignore  CMakeLists.txt  build.sbt
tests/smoke-tests/: CMakeLists.txt
tests/unit-tests/: BitcodeLoaderTests.cpp  CMakeLists.txt  CPGMethodTests.cpp  CPGTests.cpp  DemanglerTests.cpp  GTestRunner.cpp  TypeEqualityTests.cpp
tests/validation-tests/: CMakeLists.txt
tools/: CMakeLists.txt
tools/bitcode-transformer/: BitcodeTransformerTool.cpp  CMakeLists.txt
tools/cpg-proto-writer/: CMakeLists.txt  CPGProtoWriterTool.cpp  FileType.cpp
tools/llvm2cpg/: CMakeLists.txt  FileType.cpp  FileType.h  llvm2cpgTool.cpp
tools/objc-typegen/: CMakeLists.txt  objc-typegen.py
(+58 files in other folders)
